fixed bug with little jumping when animation ends

--- a/example/css/style.css
+++ b/example/css/style.css
@@ -11,7 +11,7 @@ html, body{
 }
 .list img{
 	float: left;
-	width: 100%;
+	
 }
 
 
